--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
     "react-calendar": "^5.1.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
