--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^24.0.5",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-i18next": "^15.1.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
